--- a/1598-generic_associated_types.html
+++ b/1598-generic_associated_types.html
@@ -8,7 +8,6 @@
 
         <!-- Custom HTML head -->
         
-        <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
@@ -34,13 +33,13 @@
     </head>
     <body>
         <!-- Provide site root to javascript -->
-        <script type="text/javascript">
+        <script>
             var path_to_root = "";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
         <!-- Work around some values being stored in localStorage wrapped in quotes -->
-        <script type="text/javascript">
+        <script>
             try {
                 var theme = localStorage.getItem('mdbook-theme');
                 var sidebar = localStorage.getItem('mdbook-sidebar');
@@ -56,7 +55,7 @@
         </script>
 
         <!-- Set the theme before any content is loaded, prevents flash -->
-        <script type="text/javascript">
+        <script>
             var theme;
             try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { }
             if (theme === null || theme === undefined) { theme = default_theme; }
@@ -68,7 +67,7 @@
         </script>
 
         <!-- Hide / unhide sidebar before it is displayed -->
-        <script type="text/javascript">
+        <script>
             var html = document.querySelector('html');
             var sidebar = 'hidden';
             if (document.body.clientWidth >= 1080) {
@@ -81,7 +80,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="0049-match-arm-attributes.html">0049-match-arm-attributes</a></li><li class="chapter-item expanded "><a href="0198-slice-notation.html">0198-slice-notation</a></li><li class="chapter-item expanded "><a href="1548-global-asm.html">1548-global-asm</a></li><li class="chapter-item expanded "><a href="1598-generic_associated_types.html" class="active">1598-generic_associated_types</a></li><li class="chapter-item expanded "><a href="2000-const-generics.html">2000-const-generics</a></li><li class="chapter-item expanded "><a href="2342-const-control-flow.html">2342-const-control-flow</a></li><li class="chapter-item expanded "><a href="2495-min-rust-version.html">2495-min-rust-version</a></li><li class="chapter-item expanded "><a href="2592-futures.html">2592-futures</a></li><li class="chapter-item expanded "><a href="2789-sparse-index.html">2789-sparse-index</a></li><li class="chapter-item expanded "><a href="2843-llvm-asm.html">2843-llvm-asm</a></li><li class="chapter-item expanded "><a href="3128-io-safety.html">3128-io-safety</a></li><li class="chapter-item expanded "><a href="3151-scoped-threads.html">3151-scoped-threads</a></li><li class="chapter-item expanded affix "><a href="CONTRIBUTING.html">Contributing</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="0049-match-arm-attributes.html">0049-match-arm-attributes</a></li><li class="chapter-item expanded "><a href="0198-slice-notation.html">0198-slice-notation</a></li><li class="chapter-item expanded "><a href="1548-global-asm.html">1548-global-asm</a></li><li class="chapter-item expanded "><a href="1598-generic_associated_types.html" class="active">1598-generic_associated_types</a></li><li class="chapter-item expanded "><a href="2000-const-generics.html">2000-const-generics</a></li><li class="chapter-item expanded "><a href="2342-const-control-flow.html">2342-const-control-flow</a></li><li class="chapter-item expanded "><a href="2394-async_await.html">2394-async_await</a></li><li class="chapter-item expanded "><a href="2495-min-rust-version.html">2495-min-rust-version</a></li><li class="chapter-item expanded "><a href="2592-futures.html">2592-futures</a></li><li class="chapter-item expanded "><a href="2789-sparse-index.html">2789-sparse-index</a></li><li class="chapter-item expanded "><a href="2843-llvm-asm.html">2843-llvm-asm</a></li><li class="chapter-item expanded "><a href="3128-io-safety.html">3128-io-safety</a></li><li class="chapter-item expanded "><a href="3151-scoped-threads.html">3151-scoped-threads</a></li><li class="chapter-item expanded affix "><a href="CONTRIBUTING.html">Contributing</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -99,7 +98,7 @@
                             <i class="fa fa-paint-brush"></i>
                         </button>
                         <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
-                            <li role="none"><button role="menuitem" class="theme" id="light">Light (default)</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="light">Light</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="rust">Rust</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="coal">Coal</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="navy">Navy</button></li>
@@ -132,7 +131,7 @@
                 </div>
 
                 <!-- Apply ARIA attributes after the sidebar and the sidebar toggle button are added to the DOM -->
-                <script type="text/javascript">
+                <script>
                     document.getElementById('sidebar-toggle').setAttribute('aria-expanded', sidebar === 'visible');
                     document.getElementById('sidebar').setAttribute('aria-hidden', sidebar !== 'visible');
                     Array.from(document.querySelectorAll('#sidebar a')).forEach(function(link) {
@@ -161,8 +160,7 @@
     type Item&lt;'a&gt;;
     fn next&lt;'a&gt;(&amp;'a mut self) -&gt; Option&lt;Self::Item&lt;'a&gt;&gt;;
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p>這樣的特徵是很實用的，它能提供一種疊代器（Iterator）所回傳的數值能附有一個生命週期，且能與傳至 <code>next</code> 的引用所擁有的生命週期綁定。此特徵最明顯的使用情境就是對一個向量（vector）所產生的疊代器，在每次疊代時都能產生重疊（overlapping）且可變（mutable）的子切片（subslice）。使用標準的 <code>Iterator</code> 介面的話，這樣的實作是無效的，因為每個切片必須活得與整個疊代器一樣長，而非只是透過 <code>next</code> 借用的時間而已。</p>
 <p>這樣的特徵無法用現在的 Rust 表現出來，因為它需要依賴某種形式的高階種類多型。本 RFC 將擴充 Rust 來確保此特定形式的高階種類多型，也就是我們在此所稱作的關聯型別建構子。此功能有各種應用場景，但最主要的應用都還是與 <code>StreamingIterator</code> 類似：定義的特徵所持有的型別能附有一個生命週期，並與接收型別所借用的生命週期相互關聯。</p>
 <h1 id="設計細節"><a class="header" href="#設計細節">設計細節</a></h1>
@@ -174,8 +172,7 @@
 </span>fn not(x: bool) -&gt; bool {
    !x
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p><code>not</code> 的型別為 <code>bool -&gt; bool</code>（抱歉這邊開始會使用些與 Rust 不大一樣的語法），而  <code>not(true)</code> 的型別則是 <code>bool</code>。注意這樣的不同點正是了解高階種類的關鍵。</p>
 <p>在種類的分析中，<code>bool</code>、<code>char</code>、<code>bool -&gt; bool</code> 等等型別都有 <code>type</code> 這種種類。每個型別都有  <code>type</code> 種類。然而 <code>type</code> 只是基本種類，就像 <code>bool</code> 只是個基本型別，我們能寫出更複雜的種類像是 <code>type -&gt; type</code>，這樣的種類其中一個範例就是 <code>Vec</code> 能接受一個型別然後產生出一個型別。而 <code>Vec</code> 的種類與 <code>Vec&lt;i32&gt;</code> 的種類（也就是 <code>type</code>）之間的差異，就相對應於 <code>not</code> 與 <code>not(true)</code> 之間的差異。另外注意 <code>Vec&lt;T&gt;</code> 的種類和 <code>Vec&lt;i32&gt;</code> 一樣仍然是 <code>type</code>。盡管 <code>T</code> 是個型別參數，<code>Vec&lt;T&gt;</code> 還是接收了一個型別，就像 <code>not(x)</code> 的型別仍然是 <code>bool</code>，盡管 <code>x</code> 是個變數一樣。</p>
 <p>Rust 相對不尋常的特色是它有<strong>兩種</strong>基本種類，相較於許多語言處理高階種類時只會有一種種類 <code>type</code>。Rust 的另一個基本種類就是生命週期參數。如果你有個型別像是 <code>Foo&lt;'a&gt;</code>，<code>Foo</code> 的種類就是 <code>lifetime -&gt; type</code>。</p>
@@ -190,8 +187,7 @@
 </span>trait StreamingIterator {
    type Item&lt;'a&gt;;
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p>這樣能清楚表達關聯項目 <code>Item</code> 是一個型別建構子，而非只是個型別，因為它有個型別參數附加在旁。</p>
 <p>與關聯型別一樣，關聯型別建構子可以用在界限內：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
@@ -202,14 +198,12 @@
     
     fn iter&lt;'a&gt;(&amp;'a self) -&gt; Self::Iter&lt;'a&gt;;
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p>此界限套用到型別建構子的「輸出」，然後參數會被視為高階參數。也就是說上述的界限幾乎等於對特徵加上這樣的界限：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>for&lt;'a&gt; Self::Iter&lt;'a&gt;: Iterator&lt;Item = Self::Item&lt;'a&gt;&gt;
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p>在 <code>impl</code> 中賦值給關聯型別建構子的語法與賦值給關聯型別的非常接近：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -217,8 +211,7 @@
     type Item&lt;'a&gt; = &amp;'a mut [T];
     ...
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <h3 id="使用關聯型別建構子建立型別"><a class="header" href="#使用關聯型別建構子建立型別">使用關聯型別建構子建立型別</a></h3>
 <p>一旦特徵擁有關聯型別建構子時，它就能套用在作用域中的任何參數或具體項。這能同時用在特徵的本體內與本體外，使用的語法就與使用關聯型別類似。以下是一些範例：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
@@ -233,8 +226,7 @@ struct Foo&lt;T: StreamingIterator&gt; {
     // 在特徵外將實際生命週期套用至建構子。
     bar: &lt;T as StreamingIterator&gt;::Item&lt;'static&gt;;
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p>關聯型別建構子也能用來產生其他型別建構子：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -249,8 +241,7 @@ trait Baz {
 impl&lt;T&gt; Baz for T where T: Foo {
     type Quux&lt;'a&gt; = &lt;T as Foo&gt;::Bar&lt;'a, 'static&gt;;
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p>最後，關聯型別建構子的生命週期和其他型別建構子的一樣能被省略。加上生命週期省略的話，<code>StreamingIterator</code> 的完整定義就可以是：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -258,8 +249,7 @@ impl&lt;T&gt; Baz for T where T: Foo {
     type Item&lt;'a&gt;;
     fn next(&amp;mut self) -&gt; Option&lt;Self::Item&gt;;
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <h3 id="在界限中使用關聯型別建構子"><a class="header" href="#在界限中使用關聯型別建構子">在界限中使用關聯型別建構子</a></h3>
 <p>對於參數的型別是由特徵的關聯型別建構子產生的話，使用者可以用高階特徵界限（Higher-Rank Trait Bounds）來綁定。無論是對型別相等的界限或是對此種類的特徵界限都是有效的：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
@@ -267,8 +257,7 @@ impl&lt;T&gt; Baz for T where T: Foo {
 </span>fn foo&lt;T: for&lt;'a&gt; StreamingIterator&lt;Item&lt;'a&gt;=&amp;'a [i32]&gt;&gt;(iter: T) { ... }
 
 fn foo&lt;T&gt;(iter: T) where T: StreamingIterator, for&lt;'a&gt; T::Item&lt;'a&gt;: Display { ... }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p>本 RFC 並沒有提出任何允許型別建構子自己綁定的形式，無論是相等界限或特徵界限（當然特徵界限是不可能的）。</p>
 <h2 id="型別引數的關聯型別建構子"><a class="header" href="#型別引數的關聯型別建構子">型別引數的關聯型別建構子</a></h2>
 <p>本 RFC 目前所有的範例都專注在生命週期引數的關聯型別建構子。但是本 RFC 一樣有提出導入型別的關聯型別建構子：</p>
@@ -277,8 +266,7 @@ fn foo&lt;T&gt;(iter: T) where T: StreamingIterator, for&lt;'a&gt; T::Item&lt;'a
 </span>trait Foo {
     type Bar&lt;T&gt;;
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p>本 RFC <strong>並沒有</strong>打算讓高階特徵界限能進一步接收型別引數，因為這會讓它們更難清楚地表達語義。我們的確有這樣的擴充需求，但這超出本 RFC 的範疇。</p>
 <p>型別引數可以透過「Family」模式來達成其他形式的高階種類多型。舉例來說，使用 <code>PointerFamily</code> 特徵可以將 Arc 與 Rc 抽象出來：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
@@ -309,8 +297,7 @@ impl PointerFamily for RcFamily {
 struct Foo&lt;P: PointerFamily&gt; {
     bar: P::Pointer&lt;String&gt;,
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <h2 id="特徵界限與-where"><a class="header" href="#特徵界限與-where">特徵界限與 where</a></h2>
 <h3 id="關聯型別建構子的界限"><a class="header" href="#關聯型別建構子的界限">關聯型別建構子的界限</a></h3>
 <p>關聯型別建構子的界限會被視為特徵自己的高階界限。這讓它們的行為能與一般關聯型別的界限一致。舉例來說：</p>
@@ -319,16 +306,14 @@ struct Foo&lt;P: PointerFamily&gt; {
 </span>trait Foo {
     type Assoc&lt;'a&gt;: Trait&lt;'a&gt;;
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p>就等同於：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>trait Foo where for&lt;'a&gt; Self::Assoc&lt;'a&gt;: Trait&lt;'a&gt; {
     type Assoc&lt;'a&gt;;
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <h3 id="關聯型別上的-where"><a class="header" href="#關聯型別上的-where">關聯型別上的 <code>where</code></a></h3>
 <p>另一方面，在關聯型別上使用 where 則會要求每次使用關聯型別時都得滿足其限制。舉例來說：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
@@ -336,8 +321,7 @@ struct Foo&lt;P: PointerFamily&gt; {
 </span>trait Foo {
     type Assoc where Self: Sized;
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p>每次呼叫 <code>&lt;T as Foo&gt;::Assoc</code> 時都需要證明 <code>T: Sized</code>，就像其他場合需要證明有符合 impl 的界限一樣。</p>
 <p>(@nikomatsakis 相信在某些場合的 where 會需要關聯型別建構子指明處理生命週期。實際細節將不會包含在本 RFC，因為這在實際實作時才會更清楚。)</p>
 <h2 id="在其他高階種類多型之前只實作此功能的優點"><a class="header" href="#在其他高階種類多型之前只實作此功能的優點">在其他高階種類多型之前只實作此功能的優點</a></h2>
@@ -372,8 +356,7 @@ trait Foo&lt;'a&gt; {
 trait Foo&lt;'a&gt; {
     type Bar&lt;'a&gt;;
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <h2 id="並非完整的高階種類型別"><a class="header" href="#並非完整的高階種類型別">並非完整的「高階種類型別」</a></h2>
 <p>本 RFC 並沒有加入當大家講到高階種類型別時的所有功能。舉例來說，它並沒有辦法提供特徵像是 <code>Monad</code>。有些人傾向於一次實作完所有這些功能。然而，此功能是能夠兼容於其他形式的高階種類多型的，且並沒有將他們的可能性排除掉。事實上，它還解決了一些會影響其他高階種類形式的實作細節，為它們開拓了可能的路徑，像是 Partial Application。</p>
 <h2 id="語法與其他形式的高階種類多型都不一樣"><a class="header" href="#語法與其他形式的高階種類多型都不一樣">語法與其他形式的高階種類多型都不一樣</a></h2>
@@ -389,8 +372,7 @@ trait Foo&lt;'a&gt; {
    type Item: 'a;
    fn next(&amp;'a self) -&gt; Option&lt;Self::Item&gt;;
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p>這樣你就可以綁定型別成 <code>T: for&lt;'a&gt; StreamingIterator&lt;'a&gt;</code> 來避免每次出現 <code>StreamingIterator</code> 時都會被生命週期感染。</p>
 <p>然而這樣僅避免了 <code>StreamingIterator</code> 的傳染性，只能用在一些關聯型別建構子能夠表達的型別，而且這更像是針對限制下的權變措施，而非等價的替代方案。</p>
 <h2 id="對關聯型別建構子施加限制"><a class="header" href="#對關聯型別建構子施加限制">對關聯型別建構子施加限制</a></h2>
@@ -410,8 +392,7 @@ trait Foo&lt;'a&gt; {
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>struct IterItem&lt;'a, I: Iterable&gt;(I::Item&lt;'a&gt;);
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <h1 id="未解決問題"><a class="header" href="#未解決問題">未解決問題</a></h1>
 
                     </main>
@@ -446,18 +427,18 @@ trait Foo&lt;'a&gt; {
 
 
 
-        <script type="text/javascript">
+        <script>
             window.playground_copyable = true;
         </script>
 
 
-        <script src="elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="mark.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="searcher.js" type="text/javascript" charset="utf-8"></script>
+        <script src="elasticlunr.min.js"></script>
+        <script src="mark.min.js"></script>
+        <script src="searcher.js"></script>
 
-        <script src="clipboard.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="highlight.js" type="text/javascript" charset="utf-8"></script>
-        <script src="book.js" type="text/javascript" charset="utf-8"></script>
+        <script src="clipboard.min.js"></script>
+        <script src="highlight.js"></script>
+        <script src="book.js"></script>
 
         <!-- Custom JS scripts -->
 
