--- a/2592-futures.html
+++ b/2592-futures.html
@@ -8,7 +8,6 @@
 
         <!-- Custom HTML head -->
         
-        <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
@@ -34,13 +33,13 @@
     </head>
     <body>
         <!-- Provide site root to javascript -->
-        <script type="text/javascript">
+        <script>
             var path_to_root = "";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
         <!-- Work around some values being stored in localStorage wrapped in quotes -->
-        <script type="text/javascript">
+        <script>
             try {
                 var theme = localStorage.getItem('mdbook-theme');
                 var sidebar = localStorage.getItem('mdbook-sidebar');
@@ -56,7 +55,7 @@
         </script>
 
         <!-- Set the theme before any content is loaded, prevents flash -->
-        <script type="text/javascript">
+        <script>
             var theme;
             try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { }
             if (theme === null || theme === undefined) { theme = default_theme; }
@@ -68,7 +67,7 @@
         </script>
 
         <!-- Hide / unhide sidebar before it is displayed -->
-        <script type="text/javascript">
+        <script>
             var html = document.querySelector('html');
             var sidebar = 'hidden';
             if (document.body.clientWidth >= 1080) {
@@ -81,7 +80,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="0049-match-arm-attributes.html">0049-match-arm-attributes</a></li><li class="chapter-item expanded "><a href="0198-slice-notation.html">0198-slice-notation</a></li><li class="chapter-item expanded "><a href="1548-global-asm.html">1548-global-asm</a></li><li class="chapter-item expanded "><a href="1598-generic_associated_types.html">1598-generic_associated_types</a></li><li class="chapter-item expanded "><a href="2000-const-generics.html">2000-const-generics</a></li><li class="chapter-item expanded "><a href="2342-const-control-flow.html">2342-const-control-flow</a></li><li class="chapter-item expanded "><a href="2495-min-rust-version.html">2495-min-rust-version</a></li><li class="chapter-item expanded "><a href="2592-futures.html" class="active">2592-futures</a></li><li class="chapter-item expanded "><a href="2789-sparse-index.html">2789-sparse-index</a></li><li class="chapter-item expanded "><a href="2843-llvm-asm.html">2843-llvm-asm</a></li><li class="chapter-item expanded "><a href="3128-io-safety.html">3128-io-safety</a></li><li class="chapter-item expanded "><a href="3151-scoped-threads.html">3151-scoped-threads</a></li><li class="chapter-item expanded affix "><a href="CONTRIBUTING.html">Contributing</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="0049-match-arm-attributes.html">0049-match-arm-attributes</a></li><li class="chapter-item expanded "><a href="0198-slice-notation.html">0198-slice-notation</a></li><li class="chapter-item expanded "><a href="1548-global-asm.html">1548-global-asm</a></li><li class="chapter-item expanded "><a href="1598-generic_associated_types.html">1598-generic_associated_types</a></li><li class="chapter-item expanded "><a href="2000-const-generics.html">2000-const-generics</a></li><li class="chapter-item expanded "><a href="2342-const-control-flow.html">2342-const-control-flow</a></li><li class="chapter-item expanded "><a href="2394-async_await.html">2394-async_await</a></li><li class="chapter-item expanded "><a href="2495-min-rust-version.html">2495-min-rust-version</a></li><li class="chapter-item expanded "><a href="2592-futures.html" class="active">2592-futures</a></li><li class="chapter-item expanded "><a href="2789-sparse-index.html">2789-sparse-index</a></li><li class="chapter-item expanded "><a href="2843-llvm-asm.html">2843-llvm-asm</a></li><li class="chapter-item expanded "><a href="3128-io-safety.html">3128-io-safety</a></li><li class="chapter-item expanded "><a href="3151-scoped-threads.html">3151-scoped-threads</a></li><li class="chapter-item expanded affix "><a href="CONTRIBUTING.html">Contributing</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -99,7 +98,7 @@
                             <i class="fa fa-paint-brush"></i>
                         </button>
                         <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
-                            <li role="none"><button role="menuitem" class="theme" id="light">Light (default)</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="light">Light</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="rust">Rust</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="coal">Coal</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="navy">Navy</button></li>
@@ -132,7 +131,7 @@
                 </div>
 
                 <!-- Apply ARIA attributes after the sidebar and the sidebar toggle button are added to the DOM -->
-                <script type="text/javascript">
+                <script>
                     document.getElementById('sidebar-toggle').setAttribute('aria-expanded', sidebar === 'visible');
                     document.getElementById('sidebar').setAttribute('aria-hidden', sidebar !== 'visible');
                     Array.from(document.querySelectorAll('#sidebar a')).forEach(function(link) {
@@ -201,15 +200,13 @@
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>async fn read_frame(socket: &amp;TcpStream) -&gt; Result&lt;Frame, io::Error&gt; { ... }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p>當呼叫這個 <code>async</code> 函式，會產生一個 future，代表完成了從给定的 socket 中讀取一個框（frame）。函式簽名等同於：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>fn read_frame&lt;'sock&gt;(socket: &amp;'sock TcpStream)
     -&gt; impl Future&lt;Output = Result&lt;Frame, io::Error&gt;&gt; + 'sock;
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p>其他非同步函數可以 <strong>await</strong> 這個 future; 有關完整詳細信息，請參閱<a href="https://github.com/rust-lang/rfcs/pull/2394">隨附的 RFC</a>。</p>
 <p>除了 <code>async fn</code> 定義，future 還可以使用轉接器（adapter）來創建，就像 <code>Iterator</code> 一樣。最初，這些轉接器將完全由其他 crate 所提供，但最终它們將帶入標準函式庫。</p>
 <p>最終非同步計算以<strong>任務</strong>的形式執行，相當於輕量級執行緒。 <strong>executor</strong> 提供了從 <code>()</code> 生成的 <code>Future</code> 創建任務的能力。執行器將固定 <code>Future</code> 並對其進行 <code>poll</code>，直到為其創建的任務完成。</p>
@@ -236,8 +233,7 @@ pub enum Poll&lt;T&gt; {
     /// progress can be made.
     Pending,
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p>當一個任務返回 <code>Poll::Ready</code> 時，執行器知道該任務已經完成並且可以被刪除。</p>
 <h3 id="喚醒"><a class="header" href="#喚醒">喚醒</a></h3>
 <p>如果 future 在執行期間無法直接完成並返回 <code>Pending</code>，則它需要一種方法來稍後通知執行器它需要再次輪詢以取得進展。</p>
@@ -354,8 +350,7 @@ impl Drop for Waker {
         unsafe { (self.waker.vtable.drop_fn)(self.waker.data) }
     }
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p><code>Waker</code> 必須滿足以下要求：</p>
 <ul>
 <li>它們必須是可以克隆的。</li>
@@ -431,8 +426,7 @@ impl Drop for Waker {
     /// [`Waker::wake`]: ../task/struct.Waker.html#method.wake
     fn poll(self: Pin&lt;&amp;mut Self&gt;, waker: &amp;Waker) -&gt; Poll&lt;Self::Output&gt;;
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p>這裡的大部分解釋都遵循我們已經說過的關於任務系統的內容。一個轉折是 <code>Pin</code> 的使用，這使得可以在不同的 <code>poll</code> 調用中保留借用資訊（即「borrowing over yield
 points」）。固定機制在介紹它的 <a href="https://github.com/rust-lang/rfcs/pull/2349">RFC</a> 和有關最新修訂的<a href="https://boats.gitlab.io/blog/post/rethinking-pin/">部落格文章</a>中進行了解釋。</p>
 <h2 id="與-futures-01-的關係"><a class="header" href="#與-futures-01-的關係">與 futures 0.1 的關係</a></h2>
@@ -532,8 +526,7 @@ static VTABLE: &amp;RawWakerVTable = &amp;RawWakerVTable {
     wake: |data: *const ()| EXECUTOR.borrow_mut().as_mut().expect(...).work_queue.push(data as usize),
     drop,
 };
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p>雖然此解決方案向 <code>LocalWaker</code> 方法提供了較差的錯誤訊息（因為在錯誤的執行緒上發生 <code>wake</code> 之前，它不会恐慌，而不是在 <code>LocalWaker</code> 轉換為 <code>Waker</code> 時發生恐慌），它極大地透過去除 <code>LocalWaker</code> 和 <code>Waker</code> 型別的重複，簡化了給使用者的 API 。</p>
 <p>在實際情況下，非常可能 Rust 生態系統中最常見的執行器繼續與多執行緒相容（就像現在一樣），因此在更特化的情況，針對這種情況最佳化其人因工程學，優先於更好的錯誤訊息。</p>
 <h1 id="現有技術"><a class="header" href="#現有技術">現有技術</a></h1>
@@ -574,18 +567,18 @@ static VTABLE: &amp;RawWakerVTable = &amp;RawWakerVTable {
 
 
 
-        <script type="text/javascript">
+        <script>
             window.playground_copyable = true;
         </script>
 
 
-        <script src="elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="mark.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="searcher.js" type="text/javascript" charset="utf-8"></script>
+        <script src="elasticlunr.min.js"></script>
+        <script src="mark.min.js"></script>
+        <script src="searcher.js"></script>
 
-        <script src="clipboard.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="highlight.js" type="text/javascript" charset="utf-8"></script>
-        <script src="book.js" type="text/javascript" charset="utf-8"></script>
+        <script src="clipboard.min.js"></script>
+        <script src="highlight.js"></script>
+        <script src="book.js"></script>
 
         <!-- Custom JS scripts -->
 
